plugins {
    id 'java'
    id 'application'
    id 'org.javamodularity.moduleplugin' version '1.8.12'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '2.26.0'
}


group 'org.jytek'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.10.0'
}

sourceCompatibility = '17'
targetCompatibility = '17'

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
}

application {
  mainModule = 'org.jytek.leaguemanager'
  mainClass = 'org.jytek.leaguemanager.FsslMain'
}

javafx {
    version = '21'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
    implementation 'commons-logging:commons-logging:1.2'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'com.healthmarketscience.jackcess:jackcess:4.0.5'
    implementation 'joda-time:joda-time:2.12.5'
}


test {
useJUnitPlatform()
}


jlink {
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher{
        name = 'hello'
    }
}
jlinkZip {
    group = 'distribution'
}


